emitir() resetea el Emisor y parte desde su primer laser. emitirDesde(Laser) utiliza recursion para, desde el primer laser, generar el camino de lasers que salen del Emisor. Interaccionan con los bloques